Made more clear enums for player prop bets
