# openapi.yaml
@@ -16,10 +16,11 @@ paths:
     /sports/odds:
         get:
             operationId: getOdds
-            summary: Returns a list of upcoming and live games with recent odds
+            summary: Returns a list of upcoming and live games with recent odds. Only includes Moneyline (h2h), Spreads (spreads), Total points bets (total), and Outrights
             description: >-
                 Retrieves odds for a given sport, region, and market. It includes
-                upcoming and live games.
+                upcoming and live games. Only includes Moneyline (h2h), Spreads (spreads), Total points bets (total), and Outrights. Does not
+                include Player prop bets, Alternate spreads, Game period bets, or additional markets.
             parameters:
               - in: query
                 name: sport
@@ -39,7 +40,8 @@ paths:
               - in: query
                 name: markets
                 schema:
-                    type: string
+                    type: array
+                    $ref: '#/components/schemas/MarketKey'
                 description: >-
                     Types of odds market, comma delimited. Defaults to h2h. Valid values: h2h, spreads, totals, outrights.
               - in: query
@@ -94,10 +96,9 @@ paths:
     /sports/events:
         get:
             operationId: getEventOdds
-            summary: Returns odds for a single game.
+            summary: Returns detailed odds for a single game, including player props, game period markets, and additional markets.
             description: >-
-                Returns odds for a single game. Accepts any available betting markets using the markets parameter. 
-                Coverage of non-featured markets is currently limited to selected bookmakers and sports, and expanding over time.
+                Returns detailed odds for a single game, including player prop bets, game period markets, and additional markets. Accepts any available betting markets using the markets parameter. 
                 Game identifier (eventId) is acquired from the /sports/odds endpoint.
             parameters:
               - in: query
@@ -127,9 +128,31 @@ paths:
               - in: query
                 name: markets
                 schema:
-                    type: string
+                    type: array
+                    $ref: '#/components/schemas/MarketKey'
                 description: >-
-                    Types of odds market, comma delimited. Defaults to h2h. Valid values: h2h, spreads, totals, outrights.
+                    (Optional) Featured betting markets, comma delimited.
+              - in: query
+                name: playerPropsFootball
+                schema:
+                    type: array
+                    $ref: '#/components/schemas/PlayerPropKeyFootball'
+                description: >-
+                    (Optional) Market keys used in the API to identify different betting markets for NFL and NCAAF player props, comma delimited.
+              - in: query
+                name: playerPropsBasketball
+                schema:
+                    type: array
+                    $ref: '#/components/schemas/PlayerPropKeyBasketball'
+                description: >-
+                    (Optional) Market keys used in the API to identify different betting markets for NBA, NCAAB, and WNBA player propositions, comma delimited.
+              - in: query
+                name: playerPropsBaseball
+                schema:
+                    type: array
+                    $ref: '#/components/schemas/PlayerPropKeyBaseball'
+                description: >-
+                    (Optional) Market keys used in the API to identify different betting markets for MLB player propositions, comma delimited.
               - in: query
                 name: dateFormat
                 schema:
@@ -323,3 +346,164 @@ components:
             type: array
             items:
                 $ref: '#/components/schemas/Game'
+
+        MarketKey:
+            type: string
+            description: >
+                An enumeration of the market keys used in the API to identify different betting markets.
+                Each key is associated with a specific market type.
+            enum:
+                - h2h
+                - spreads
+                - totals
+                - outrights
+                - h2h_lay
+                - outrights_lay
+            x-descriptions:
+                - "Head to head, Moneyline: Bet on the winning team or player of a game (includes the draw for soccer)"
+                - "Points spread, Handicap: The spreads market as featured by a bookmaker. Bet on the winning team after a points handicap has been applied to each team"
+                - "Total points/goals, Over/Under: The totals market as featured by a bookmaker. Bet on the total score of the game being above or below a threshold"
+                - "Outrights, Futures: Bet on a final outcome of a tournament or competition"
+                - "Same as h2h: Bet against a h2h outcome. This market is only applicable to betting exchanges"
+                - "Same as outrights: Bet against an outrights outcome. This market is only applicable to betting exchanges"
+            example: h2h
+
+        PlayerPropKeyFootball:
+            type: string
+            description: An enumeration of the market keys used in the API to identify different betting markets for NFL and NCAAF player props.
+            enum:
+                - player_pass_tds
+                - player_pass_yds
+                - player_pass_completions
+                - player_pass_attempts
+                - player_pass_interceptions
+                - player_pass_longest_completion
+                - player_rush_yds
+                - player_rush_attempts
+                - player_rush_longest
+                - player_receptions
+                - player_reception_yds
+                - player_reception_longest
+                - player_kicking_points
+                - player_field_goals
+                - player_tackles_assists
+                - player_1st_td
+                - player_last_td
+                - player_anytime_td
+            x-descriptions:
+                player_pass_tds: "Pass Touchdowns (Over/Under): Betting on the over/under of a player's pass touchdowns."
+                player_pass_yds: "Pass Yards (Over/Under): Betting on the over/under of a player's passing yards."
+                player_pass_completions: "Pass Completions (Over/Under): Betting on the over/under of a player's pass completions."
+                player_pass_attempts: "Pass Attempts (Over/Under): Betting on the over/under of a player's pass attempts."
+                player_pass_interceptions: "Pass Intercepts (Over/Under): Betting on the over/under of a player's interceptions thrown."
+                player_pass_longest_completion: "Pass Longest Completion (Over/Under): Betting on the over/under of the longest pass completion by a player."
+                player_rush_yds: "Rush Yards (Over/Under): Betting on the over/under of a player's rushing yards."
+                player_rush_attempts: "Rush Attempts (Over/Under): Betting on the over/under of a player's rush attempts."
+                player_rush_longest: "Longest Rush (Over/Under): Betting on the over/under of the longest rush by a player."
+                player_receptions: "Receptions (Over/Under): Betting on the over/under of a player's receptions."
+                player_reception_yds: "Reception Yards (Over/Under): Betting on the over/under of a player's reception yards."
+                player_reception_longest: "Longest Reception (Over/Under): Betting on the over/under of the longest reception by a player."
+                player_kicking_points: "Kicking Points (Over/Under): Betting on the over/under of a player's total kicking points."
+                player_field_goals: "Field Goals (Over/Under): Betting on the over/under of a player's field goals made."
+                player_tackles_assists: "Tackles + Assists (Over/Under): Betting on the over/under of a player's combined tackles and assists."
+                player_1st_td: "1st Touchdown Scorer (Yes/No): Betting on whether a player will score the first touchdown."
+                player_last_td: "Last Touchdown Scorer (Yes/No): Betting on whether a player will score the last touchdown."
+                player_anytime_td: "Anytime Touchdown Scorer (Yes/No): Betting on whether a player will score a touchdown at any time during a game."
+
+        PlayerPropKeyBasketball:
+            type: string
+            description: An enumeration of the market keys used in the API to identify different betting markets for NBA, NCAAB, and WNBA player propositions.
+            enum:
+                - player_points
+                - player_rebounds
+                - player_assists
+                - player_threes
+                - player_blocks
+                - player_steals
+                - player_blocks_steals
+                - player_turnovers
+                - player_points_rebounds_assists
+                - player_points_rebounds
+                - player_points_assists
+                - player_rebounds_assists
+                - player_first_basket
+                - player_double_double
+                - player_triple_double
+                - player_points_alternate
+                - player_rebounds_alternate
+                - player_assists_alternate
+                - player_blocks_alternate
+                - player_steals_alternate
+                - player_threes_alternate
+                - player_points_assists_alternate
+                - player_points_rebounds_alternate
+                - player_rebounds_assists_alternate
+                - player_points_rebounds_assists_alternate
+            x-descriptions:
+                player_points: "Points (Over/Under): Betting on the over/under of a player's points."
+                player_rebounds: "Rebounds (Over/Under): Betting on the over/under of a player's rebounds."
+                player_assists: "Assists (Over/Under): Betting on the over/under of a player's assists."
+                player_threes: "Threes (Over/Under): Betting on the over/under of a player's three-point field goals made."
+                player_blocks: "Blocks (Over/Under): Betting on the over/under of a player's blocks."
+                player_steals: "Steals (Over/Under): Betting on the over/under of a player's steals."
+                player_blocks_steals: "Blocks + Steals (Over/Under): Betting on the over/under of a player's combined blocks and steals."
+                player_turnovers: "Turnovers (Over/Under): Betting on the over/under of a player's turnovers."
+                player_points_rebounds_assists: "Points + Rebounds + Assists (Over/Under): Betting on the over/under of a player's combined points, rebounds, and assists."
+                player_points_rebounds: "Points + Rebounds (Over/Under): Betting on the over/under of a player's combined points and rebounds."
+                player_points_assists: "Points + Assists (Over/Under): Betting on the over/under of a player's combined points and assists."
+                player_rebounds_assists: "Rebounds + Assists (Over/Under): Betting on the over/under of a player's combined rebounds and assists."
+                player_first_basket: "First Basket Scorer (Yes/No): Betting on whether a player will score the first basket."
+                player_double_double: "Double Double (Yes/No): Betting on whether a player will achieve a double double."
+                player_triple_double: "Triple Double (Yes/No): Betting on whether a player will achieve a triple double."
+                player_points_alternate: "Alternate Points (Over/Under): Betting on an alternate line for a player's points."
+                player_rebounds_alternate: "Alternate Rebounds (Over/Under): Betting on an alternate line for a player's rebounds."
+                player_assists_alternate: "Alternate Assists (Over/Under): Betting on an alternate line for a player's assists."
+                player_blocks_alternate: "Alternate Blocks (Over/Under): Betting on an alternate line for a player's blocks."
+                player_steals_alternate: "Alternate Steals (Over/Under): Betting on an alternate line for a player's steals."
+                player_threes_alternate: "Alternate Threes (Over/Under): Betting on an alternate line for a player's three-point field goals made."
+                player_points_assists_alternate: "Alternate Points + Assists (Over/Under): Betting on an alternate line for a player's combined points and assists."
+                player_points_rebounds_alternate: "Alternate Points + Rebounds (Over/Under): Betting on an alternate line for a player's combined points and rebounds."
+                player_rebounds_assists_alternate: "Alternate Rebounds + Assists (Over/Under): Betting on an alternate line for a player's combined rebounds and assists."
+                player_points_rebounds_assists_alternate: "Alternate Points + Rebounds + Assists (Over/Under): Betting on an alternate line for a player's combined points, rebounds, and assists."
+
+        PlayerPropKeyBaseball:
+            type: string
+            description: An enumeration of the market keys used in the API to identify different betting markets for MLB player propositions.
+            enum:
+                - batter_home_runs
+                - batter_hits
+                - batter_total_bases
+                - batter_rbis
+                - batter_runs_scored
+                - batter_hits_runs_rbis
+                - batter_singles
+                - batter_doubles
+                - batter_triples
+                - batter_walks
+                - batter_strikeouts
+                - batter_stolen_bases
+                - pitcher_strikeouts
+                - pitcher_record_a_win
+                - pitcher_hits_allowed
+                - pitcher_walks
+                - pitcher_earned_runs
+                - pitcher_outs
+            x-descriptions:
+                batter_home_runs: "Batter home runs (Over/Under): Betting on the over/under of a batter's home runs."
+                batter_hits: "Batter hits (Over/Under): Betting on the over/under of a batter's hits."
+                batter_total_bases: "Batter total bases (Over/Under): Betting on the over/under of a batter's total bases."
+                batter_rbis: "Batter RBIs (Over/Under): Betting on the over/under of a batter's runs batted in."
+                batter_runs_scored: "Batter runs scored (Over/Under): Betting on the over/under of the runs scored by a batter."
+                batter_hits_runs_rbis: "Batter hits + runs + RBIs (Over/Under): Betting on the over/under of a batter's total hits, runs scored, and RBIs."
+                batter_singles: "Batter singles (Over/Under): Betting on the over/under of a batter's singles."
+                batter_doubles: "Batter doubles (Over/Under): Betting on the over/under of a batter's doubles."
+                batter_triples: "Batter triples (Over/Under): Betting on the over/under of a batter's triples."
+                batter_walks: "Batter walks (Over/Under): Betting on the over/under of a batter's base on balls."
+                batter_strikeouts: "Batter strikeouts (Over/Under): Betting on the over/under of a batter's strikeouts."
+                batter_stolen_bases: "Batter stolen bases (Over/Under): Betting on the over/under of a batter's stolen bases."
+                pitcher_strikeouts: "Pitcher strikeouts (Over/Under): Betting on the over/under of a pitcher's strikeouts."
+                pitcher_record_a_win: "Pitcher to record a win (Yes/No): Betting on whether a pitcher will record a win."
+                pitcher_hits_allowed: "Pitcher hits allowed (Over/Under): Betting on the over/under of the hits allowed by a pitcher."
+                pitcher_walks: "Pitcher walks (Over/Under): Betting on the over/under of the walks issued by a pitcher."
+                pitcher_earned_runs: "Pitcher earned runs (Over/Under): Betting on the over/under of the earned runs allowed by a pitcher."
+                pitcher_outs: "Pitcher outs (Over/Under): Betting on the over/under of the outs recorded by a pitcher."
